mwDev/mwDev/src/objects/mwJobComment__c.object
<CustomObject>
    <description>Object to hold internal and external comments</description>
    <fields>
        <fullName>mwComment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mwIs_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Private?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mwJobId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>mwJob__c</referenceTo>
        <relationshipLabel>Job Comments</relationshipLabel>
        <relationshipName>Job_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mwStatusCode__c</fullName>
        <label>Status Code</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Quality Check,Waiting on Machine,Painting Pending,Partial Delivery</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Job Comment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>mwComment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>